--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     margin: 0px;
 }
 
+/* header styles */
 header {
     align-items: center;
     background-color: purple;
@@ -15,6 +16,8 @@ header {
     padding: 15px;
 }
 
+
+/* main section styles */
 .main {
     background: black;
     color: white;
@@ -26,6 +29,7 @@ header {
     padding-top: 15px;
 }
 
+/* scoreboard styles */
 .scoreBoard {
     border-right: solid 2px grey;
     height: 100%;
@@ -52,6 +56,7 @@ ul {
     width: 150px;
 }
 
+/* quiz section styles */
 .quiz {
     display: flex;
     padding-left: 5px;
@@ -60,7 +65,7 @@ ul {
     height: 100%;
     width: 80%;
 }
-
+/* question section styles */
 .question {
     display: flex;
     flex-direction: column;
@@ -82,6 +87,7 @@ ul {
     padding-bottom: 15px;
 }
 
+/* answer button styles */
 .answerBtns {
     display: none;
     height: 50px;
@@ -90,6 +96,7 @@ ul {
     min-width: 200px;
 }
 
+/* user input prompt */
 .prompt {
     display: none;
 }
@@ -98,4 +105,29 @@ ul {
     height: 35px;
     margin-top: 1%;
     width: 150px;
+}
+
+/* adjust layout for phone-medium screens */
+@media screen and (max-width: 900px) {
+    .main {
+        flex-direction: column;
+    }
+
+    .scoreBoard {
+        border-right: none;
+        height: 25%;
+        width: 100%;
+    }
+
+    ul li {
+        display: inline;
+        padding-left: 2px;
+    }
+
+    .quiz {
+        border-top: 1px grey solid;
+        padding-left: 2%;
+        padding-top: 1%;
+        width: 100%;
+    }
 }
