--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ ul {
     padding-left: 5px;
     flex-direction: column;
     padding-left: 50px;
+    padding-right: 50px;
     height: 100%;
     width: 80%;
 }
@@ -109,6 +110,10 @@ ul {
 
 /* adjust layout for phone-medium screens */
 @media screen and (max-width: 900px) {
+    header{
+        height: 100%;
+    }
+
     .main {
         flex-direction: column;
     }
@@ -127,6 +132,7 @@ ul {
     .quiz {
         border-top: 1px grey solid;
         padding-left: 2%;
+        padding-right: 2%;
         padding-top: 1%;
         width: 100%;
     }
